# matisse-pipeline

./: .gitignore  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  tutorial.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  workflow-tutorial.md
src/matisse/cli/: bcd.py  doctor.py  flux_calibrate.py  main.py  reduce.py  show.py
src/matisse/core/: auto_calib.py  auto_pipeline.py  lib_auto_calib.py  lib_auto_pipeline.py  tidyup.py
src/matisse/core/bcd/: config.py  correction.py  io_utils.py  merge.py  quality_metrics.py  visualization.py
src/matisse/core/flux/: __init__.py  airmass.py  calibrator_spectrum.py  databases.py  diagnostics.py  flux_calibration.py  transfer_function.py  utils.py
src/matisse/core/flux/data/: __init__.py
src/matisse/core/utils/: io_utils.py  oifits_reader.py
src/matisse/legacy/: libFluxCal_STARSFLUX.py  mat_fluxCal.py
src/matisse/viewer/: viewer_plotly.py
tests/: conftest.py  test_auto_pipeline.py  test_bcd_magic.py  test_calibration.py  test_cli.py  test_doctor.py  test_flux.py  test_matisse_lib.py  test_viewer.py
tests/data/test_dir_bcd/: fake_calib_IR-LM_LOW_IN_IN_noChop.fits  fake_calib_IR-LM_LOW_IN_OUT_noChop.fits  fake_calib_IR-LM_LOW_OUT_IN_noChop.fits  fake_calib_IR-LM_LOW_OUT_OUT_noChop.fits
tests/data/test_dir_flux/: 2025_fakecal_U1U2U3U4_IR-N_LOW_OUT_OUT_noChop.fits  2025_fakesci_U1U2U3U4_IR-LM_LOW_OUT_OUT_noChop.fits  2025_fakesci_U1U2U3U4_IR-N_LOW_OUT_OUT_noChop.fits
tests/data/test_dir_viewer/: fake1_IR-LM_LOW_IN_IN_noChop.fits  fake1_IR-LM_LOW_IN_OUT_noChop.fits  fake1_IR-N_LOW_IN_IN_noChop.fits
