[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "matisse"
version = "0.5.0"
description = "Modern and modular MATISSE interferometric data-reduction pipeline interface"
authors = [
    { name = "Anthony Soulain - MATISSE consortium", email = "anthony.soulain@oca.eu" },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10, <3.15"
dependencies = [
    "astropy>=6.1.7",
    "astroquery>=0.4.11",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.7",
    "mplcursors>=0.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pooch>=1.8.0",
    "rich>=14.1.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "setuptools<81",
    "skycalc-cli>=1.4",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
matisse = "matisse.cli.main:main"

[project.urls]
homepage = "https://github.com/Matisse-Consortium/matisse-pipeline"
Issues = "https://github.com/Matisse-Consortium/matisse-pipeline/issues"

[dependency-groups]
typecheck = ["mypy>=1.14.1", "types-termcolor>=1.1.6.2"]
test = ["pytest>=7.2.1", "pytest-cov>=4.1.0", "ruff", "pre-commit"]

[tool.ruff]
# Exclude all Python files in the legacy folder
exclude = ["src/matisse/legacy/"]

[tool.ruff.lint]
exclude = ["*__init__.py", "src/matisse/legacy/"]
ignore = ["E501"]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"src/matisse/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true
exclude = ["src/matisse/legacy"]

[tool.pytest.ini_options]
addopts = "--cov=src/matisse --cov-report=xml --cov-report=term --cov-fail-under=0"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Keyword name 'ESO.*':astropy.io.fits.card.VerifyWarning",
    "ignore:.*HIERARCH card will be created.*:astropy.io.fits.card.VerifyWarning",
]

[tool.coverage.run]
omit = ["src/matisse/legacy/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version_files = ["pyproject.toml:^version ="]
version_provider = "uv"
update_map = { "pyproject.toml" = "version" }
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
